# graduation-project

./: diplom.docx
FTP/: main.py  pyproject.toml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  test.sql
backend/alembic/: env.py
backend/alembic/versions/: 2025_03_11_1931-391a2a0a1abd_create_course_table.py  2025_03_11_2138-cca2b0960630_create_material_table.py  2025_03_15_1225-4459c64ab88e_create_users_table.py  2025_03_15_1253-325146235ae0_create_access_token_table.py  2025_03_15_1740-dd4fdafbad9e_init_db.py  2025_03_21_1821-17798b9ec8f7_add_users_and_session_table.py  2025_03_22_1910-5e30ba936d93_add_user_featured_course_model_table.py  2025_03_22_1916-9c4ccf2f7cb8_add_user_featured_course_model_table.py  2025_04_19_1546-06291a827af1_add_name_column_to_materials_table.py  2025_04_19_1843-001bd8db2218_add_table_material_files.py  2025_04_22_2240-e9374f83547d_add_column_teacher_into_courses.py  2025_05_07_1631-58901a5f6d2a_add_column_hours_to_table_courses.py
backend/app/: main.py  test.py
backend/app/application/course/: use_cases.py
backend/app/common/: strings.py
backend/app/domain/: __init__.py
backend/app/domain/auth/: models.py  repositories.py
backend/app/domain/courses/: models.py  repositories.py  value_objects.py
backend/app/domain/materials/: models.py  repositories.py
backend/app/interfaces/: __init__.py
backend/app/services/: __init__.py  courses_service.py  materials_service.py  user_featured_courses_service.py  users_service.py  utils.py
backend/app/use_cases/: __init__.py
background/: README.md  (+5 more)
(+198 files in other folders)
