[project]
name = "ftp"
version = "0.1.0"
description = ""
authors = [
    {name = "ValeryPotrebina",email = "valery_potrebina_2003@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyftpdlib (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
